--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,24 @@ a {text-decoration: none;}
 p {margin: 0.75rem 0;}
 
 /* Utilities */
+.container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 0 2rem;
+    overflow: hidden;
+}
+
+.text-center {
+    text-align: center;
+}
+
 .text-primary {color: #93cb52;}
+
+.m-heading {
+    font-size: 2rem;
+    margin-bottom: 0.75rem;
+    line-height: 1.1;
+}
 
 .l-heading{
     font-size: 4rem;
@@ -46,6 +63,10 @@ p {margin: 0.75rem 0;}
     background: #333;
     color: #fff;
 }
+
+.py-1 {padding: 1.5rem 0;}
+.py-2 {padding: 2rem 0;}
+.py-3 {padding: 3rem 0;}
 
 /* Navbar */
 #navbar {
@@ -94,7 +115,28 @@ p {margin: 0.75rem 0;}
 
     /* Overlay */
     position: absolute;
-    top: 60px;
+    top: 65px;
     left: 0;
+    right: 0;
+    bottom: 0;
     background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Section: What We Do */
+#what .items {
+    display: flex;
+    padding: 1rem;
+}
+
+#what .items .item {
+    flex: 1;
+    text-align: center;
+    padding: 1rem;
+}
+
+#what .items .item i {
+    background: #93cb52;
+    padding: 1rem;
+    border-radius: 50%;
+    margin-bottom: 1rem;
 }
