--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,11 @@ p {margin: 0.75rem 0;}
     color: #fff;
 }
 
+.bg-primary {
+    background: #93cb52;
+    color: #fff;
+}
+
 .m-heading {
     font-size: 2rem;
     margin-bottom: 0.75rem;
@@ -178,11 +183,35 @@ p {margin: 0.75rem 0;}
     background: url('../img/people.jpg') no-repeat center center/cover;
 }
 
-/* Clients */
+/* Section: Clients */
 #clients .items{display: flex;}
 
 #clients .items img {
     display: block;
     margin: auto;
     width: 60%;
+}
+
+/* Section: Contact */
+#contact {
+    display: flex;
+}
+
+#contact .map, 
+#contact .contact-form {
+    flex: 1;
+}
+
+#contact .contact-form .form-group {
+    margin: 0.75rem;
+}
+
+#contact .contact-form label {
+    display: block;
+}
+
+#contact .contact-form input,
+#contact .contact-form textarea{
+    width: 100%;
+    padding: 0.5rem;
 }
